--- a/mon/index.html
+++ b/mon/index.html
@@ -91,16 +91,16 @@
     </div>
 
     <!-- header-start -->
-    <header>
+    <header id="header">
         <div class="header-area ">
             <div id="sticky-header" class="main-header-area">
                 <div class="container-fluid p-0">
                     <div class="row align-items-center no-gutters">
                         <!-- brand IMG-->
                         <div class="col-6 col-md-6 col-xl-2 col-lg-2  col-sm-6">
-                            <div class="logo-img text-center vertical-align-top">
+                            <div class="logo-img pl-3">
                                 <a href="index.html">
-                                    <span class="logo-name">SV-KUHNI</span>
+                                    <span class="logo-name">KUHNI</span>
                                 </a>
                             </div>
                         </div>
@@ -109,16 +109,18 @@
                             <div class="main-menu">
                                 <nav>
                                     <ul id="navigation" class="js-clone-nav">
-                                        <li><a class="active" href="index.html">Главная</a></li>
+                                        <li><a class="active" href="#header">Главная</a></li>
                                         <li class="has-children">
-                                            <a href="#">
+                                            <a href="#kuhni">
                                                 Кухни
                                                 <i class="ti-angle-down"></i>
                                             </a>
                                             <ul class="submenu">
-                                                <li><a href="blog.html">П-образные</a></li>
-                                                <li><a href="single-blog.html">Г-Образные</a></li>
-                                                <li><a href="single-blog.html">С островком</a></li>
+                                                <li><a href="#l-kuhni">Прямые</a></li>
+                                                <li><a href="#ll-kuhni">Двухрядная кухня</a></li>
+                                                <li><a href="#p-kuhni">П-Образные</a></li>
+                                                <li><a href="#g-kuhni">Г-Образные</a></li>
+                                                <li><a href="#s-kuhni">Кухня с островом</a></li>
                                                 <li><a href="single-blog.html">Современные</a></li>
                                                 <li><a href="single-blog.html">Классические</a></li>
                                                 <li><a href="single-blog.html">В стиле ЛОФТ</a></li>
@@ -137,7 +139,7 @@
                                                 <li><a href="#">Корпус кухни</a></li>
                                             </ul>
                                         </li>
-                                        <li><a href="contact.html">Цены</a></li>
+                                        <li><a href="#price-kuhni">Цены</a></li>
                                         <li><a href="contact.html">О нас</a></li>
                                         <li><a href="contact.html">Контакты</a></li>
                                     </ul>
@@ -241,7 +243,7 @@
         </div>
         <div class="block-bottom-data p-3">
             <div class="overlay-data"></div>
-            <div class="container">
+            <div class="container calculator-kuhni">
                 <div class="row no-gutters">
                     <div class="col-md-4 d-flex p-2 justify-content-center align-items-center">
                         <div class="icon pr-2">
@@ -1332,7 +1334,7 @@
 <!-- END our partner -->
 
 <!-- Price in kuhni -->
-    <section>
+<section id="price-kuhni">
         <div class="container">
             <div class="row ">
                 <div class="col-12">
