--- a/mon/index.html
+++ b/mon/index.html
@@ -7,11 +7,9 @@
     <title>Montana</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
     <!-- <link rel="manifest" href="site.webmanifest"> -->
     <link rel="shortcut icon" type="image/x-icon" href="img/favicon.png">
     <!-- Place favicon.ico in the root directory -->
-
     <!-- CSS here -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/owl.carousel.min.css">
@@ -35,16 +33,13 @@
 
 <body>
     <!--[if lte IE 9]>
-            <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
+    <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
         <![endif]-->
     <div id="overlay-loader"></div>
     <div id="overlay-menu"></div>
     <div class="loader-wrap">
-         <div class="preloader "></div>
+    <div class="preloader "></div>
     </div>
-
-
-
     <div class="mobile_menu_block">
         <div class="offcavnas_menu">
             <div class="">
@@ -89,105 +84,105 @@
             </div>
         </div>
     </div>
-
     <!-- header-start -->
-    <header id="header">
-        <div class="header-area ">
-            <div id="sticky-header" class="main-header-area">
-                <div class="container-fluid p-0">
-                    <div class="row align-items-center no-gutters">
-                        <!-- brand IMG-->
-                        <div class="col-6 col-md-6 col-xl-2 col-lg-2  col-sm-6">
-                            <div class="logo-img pl-3">
-                                <a href="index.html">
-                                    <span class="logo-name">KUHNI</span>
+    <section id="header">
+        <header>
+            <div class="header-area ">
+                <div id="sticky-header" class="main-header-area">
+                    <div class="container-fluid p-0">
+                        <div class="row align-items-center no-gutters">
+                            <!-- brand IMG-->
+                            <div class="col-6 col-md-6 col-xl-2 col-lg-2  col-sm-6">
+                                <div class="logo-img pl-3">
+                                    <a href="index.html">
+                                        <span class="logo-name">KUHNI</span>
+                                    </a>
+                                </div>
+                            </div>
+                            <!-- MAIN MENU -->
+                            <div class="col-xl-8 col-lg-8 d-lg-block d-xl-block d-none ">
+                                <div class="main-menu">
+                                    <nav>
+                                        <ul id="navigation" class="js-clone-nav">
+                                            <li><a class="" href="#header">Главная</a></li>
+                                            <li class="has-children">
+                                                <a href="#kuhni">
+                                                    Кухни
+                                                    <i class="ti-angle-down"></i>
+                                                </a>
+                                                <ul class="submenu">
+                                                    <li><a href="#l-kuhni">Прямые</a></li>
+                                                    <li><a href="#ll-kuhni">Двухрядная кухня</a></li>
+                                                    <li><a href="#p-kuhni">П-Образные</a></li>
+                                                    <li><a href="#g-kuhni">Г-Образные</a></li>
+                                                    <li><a href="#s-kuhni">Кухня с островом</a></li>
+                                                    <li><a href="single-blog.html">Современные</a></li>
+                                                    <li><a href="single-blog.html">Классические</a></li>
+                                                    <li><a href="single-blog.html">В стиле ЛОФТ</a></li>
+                                                </ul>
+                                            </li>
+                                            <li class="has-children">
+                                                <a href="#">
+                                                    Материалы
+                                                    <i class="ti-angle-down"></i>
+                                                </a>
+                                                <ul class="submenu">
+                                                    <li><a href="#">Фасады</a></li>
+                                                    <li><a href="#">Столешница</a></li>
+                                                    <li><a href="#">Фартух</a></li>
+                                                    <li><a href="#">Фурнитура</a></li>
+                                                    <li><a href="#">Корпус кухни</a></li>
+                                                </ul>
+                                            </li>
+                                            <li><a href="#price-kuhni">Цены</a></li>
+                                            <li><a href="contact.html">О нас</a></li>
+                                            <li><a href="contact.html">Контакты</a></li>
+                                        </ul>
+                                    </nav>
+                                </div>
+                            </div>
+                            <!-- Social button -->
+                            <div class="col-xl-2 col-lg-2 d-lg-block d-xl-block d-none ">
+                                <div class="book_room">
+                                    <div class="socail_links">
+                                        <ul class="js-clone-social">
+                                            <li>
+                                                <a href="#">
+                                                    <i class="fa fa-facebook-square"></i>
+                                                </a>
+                                            </li>
+                                            <li>
+                                                <a href="#">
+                                                    <i class="fa fa-twitter"></i>
+                                                </a>
+                                            </li>
+                                            <li>
+                                                <a href="#">
+                                                    <i class="fa fa-instagram"></i>
+                                                </a>
+                                            </li>
+                                        </ul>
+                                    </div>
+                                    <!--
+                                    <div class="book_btn d-none d-lg-block">
+                                        <a class="popup-with-form" href="#test-form">Book A Room</a>
+                                    </div>
+                                    -->
+                                </div>
+                            </div>
+                            <!-- burger button for modile views -->
+                            <div class="col-6 col-md-6 d-sm-block d-lg-none d-xl-none button-open-mobile-menu pr-3">
+                                <a href="#" class="js-mobile-toggle">
+                                    <i class="fa fa-bars" aria-hidden="true"></i>
                                 </a>
                             </div>
-                        </div>
-                        <!-- MAIN MENU -->
-                        <div class="col-xl-8 col-lg-8 d-lg-block d-xl-block d-none ">
-                            <div class="main-menu">
-                                <nav>
-                                    <ul id="navigation" class="js-clone-nav">
-                                        <li><a class="active" href="#header">Главная</a></li>
-                                        <li class="has-children">
-                                            <a href="#kuhni">
-                                                Кухни
-                                                <i class="ti-angle-down"></i>
-                                            </a>
-                                            <ul class="submenu">
-                                                <li><a href="#l-kuhni">Прямые</a></li>
-                                                <li><a href="#ll-kuhni">Двухрядная кухня</a></li>
-                                                <li><a href="#p-kuhni">П-Образные</a></li>
-                                                <li><a href="#g-kuhni">Г-Образные</a></li>
-                                                <li><a href="#s-kuhni">Кухня с островом</a></li>
-                                                <li><a href="single-blog.html">Современные</a></li>
-                                                <li><a href="single-blog.html">Классические</a></li>
-                                                <li><a href="single-blog.html">В стиле ЛОФТ</a></li>
-                                            </ul>
-                                        </li>
-                                        <li class="has-children">
-                                            <a href="#">
-                                                Материалы
-                                                <i class="ti-angle-down"></i>
-                                            </a>
-                                            <ul class="submenu">
-                                                <li><a href="#">Фасады</a></li>
-                                                <li><a href="#">Столешница</a></li>
-                                                <li><a href="#">Фартух</a></li>
-                                                <li><a href="#">Фурнитура</a></li>
-                                                <li><a href="#">Корпус кухни</a></li>
-                                            </ul>
-                                        </li>
-                                        <li><a href="#price-kuhni">Цены</a></li>
-                                        <li><a href="contact.html">О нас</a></li>
-                                        <li><a href="contact.html">Контакты</a></li>
-                                    </ul>
-                                </nav>
-                            </div>
-                        </div>
-                        <!-- Social button -->
-                        <div class="col-xl-2 col-lg-2 d-lg-block d-xl-block d-none ">
-                            <div class="book_room">
-                                <div class="socail_links">
-                                    <ul class="js-clone-social">
-                                        <li>
-                                            <a href="#">
-                                                <i class="fa fa-facebook-square"></i>
-                                            </a>
-                                        </li>
-                                        <li>
-                                            <a href="#">
-                                                <i class="fa fa-twitter"></i>
-                                            </a>
-                                        </li>
-                                        <li>
-                                            <a href="#">
-                                                <i class="fa fa-instagram"></i>
-                                            </a>
-                                        </li>
-                                    </ul>
-                                </div>
-                                <!--
-                                <div class="book_btn d-none d-lg-block">
-                                    <a class="popup-with-form" href="#test-form">Book A Room</a>
-                                </div>
-                                -->
-                            </div>
-                        </div>
-                        <!-- burger button for modile views -->
-                        <div class="col-6 col-md-6 d-sm-block d-lg-none d-xl-none button-open-mobile-menu pr-3">
-                            <a href="#" class="js-mobile-toggle">
-                                <i class="fa fa-bars" aria-hidden="true"></i>
-                            </a>
                         </div>
                     </div>
                 </div>
             </div>
-        </div>
-    </header>
-    <!-- header-end -->
-
+        </header>
+        <!-- header-end -->
+    </section>
     <!-- slider_area_start -->
     <div class="slider_area">
         <div class="slider-main">
@@ -283,7 +278,7 @@
     </div>
     <!-- slider_area_end -->
 
-    <section id="kuhni" class="pt-120 pb-5">
+<section id="kuhni" class="pt-120 pb-5">
 
         <div class="container">
             <div class="row">
@@ -297,7 +292,7 @@
                 </div>
             </div>
         </div>
-        <div id="l-kuhni">
+        <section id="l-kuhni">
             <!-- about_area_start -->
             <div class="container">
                 <div class="row align-items-center justify-content-center">
@@ -447,7 +442,7 @@
                 </div>
             </div>
             <!-- offers_area_end -->
-        </div>
+        </section>
         <div id="ll-kuhni">
             <!-- about_area_start -->
             <div class="container">
@@ -1334,7 +1329,7 @@
 <!-- END our partner -->
 
 <!-- Price in kuhni -->
-<section id="price-kuhni">
+<section id="price-kuhni" class="pt-120">
         <div class="container">
             <div class="row ">
                 <div class="col-12">
@@ -1942,7 +1937,6 @@
     <script src="js/plugins.js"></script>
     <script src="js/gijgo.min.js"></script>
 
-
     <!--contact js-->
     <script src="js/contact.js"></script>
     <script src="js/jquery.ajaxchimp.min.js"></script>
@@ -1950,15 +1944,13 @@
     <script src="js/jquery.validate.min.js"></script>
     <script src="js/mail-script.js"></script>
 
-    <script src="js/main.js"></script>
-    <script src="js/atlas.js"></script>
     <!-- JqueryLightGallery -->
     <script type="text/javascript" src="js/lightgallery.min.js"></script>
     <script type="text/javascript" src="js/jquery.mousewheel.min.js"></script>
     <script type="text/javascript" src="js/lg-fullscreen.min.js"></script>
     <script type="text/javascript" src="js/lg-thumbnail.min.js"></script>
-
-
+    <script src="js/main.js"></script>
+    <script src="js/atlas.js"></script>
     <script>
         $('#datepicker').datepicker({
             iconsLibrary: 'fontawesome',
