--- a/mon/index.html
+++ b/mon/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Montana</title>
+    <title>КУХНИ</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- <link rel="manifest" href="site.webmanifest"> -->
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="css/owl.carousel.min.css">
     <link rel="stylesheet" href="css/magnific-popup.css">
     <link rel="stylesheet" href="css/font-awesome.min.css">
+    <link rel="stylesheet" href="css/Linearicons-icons.css">
     <link rel="stylesheet" href="css/themify-icons.css">
     <link rel="stylesheet" href="css/nice-select.css">
     <link rel="stylesheet" href="css/flaticon.css">
@@ -45,7 +46,7 @@
             <div class="">
                 <div class="offcavnas-close">
                     <span class="closed-mobile-menu">
-                        <i class="fa fa-times" aria-hidden="true"></i>
+                       <span class="ti-close"></span>
                     </span>
                 </div>
                 <div class="offcavnas-logo slider_text text-center p-2">
@@ -95,7 +96,7 @@
                             <div class="col-6 col-md-6 col-xl-2 col-lg-2  col-sm-6">
                                 <div class="logo-img pl-3">
                                     <a href="index.html">
-                                        <span class="logo-name">KUHNI</span>
+                                        <img src="images/logo/logo2.png" class="img-fluid">
                                     </a>
                                 </div>
                             </div>
